@@ -166,7 +166,7 @@ public class SpawnActionTest extends BuildViewTestCase {
     SpawnAction action = (SpawnAction) actions[0];
     assertThat(action.getArguments())
         .containsExactly(
-            "/bin/java", "-Xverify:none", "-jvmarg", "-cp", "pkg/exe.jar", "MyMainClass")
+            "/bin/java", "-jvmarg", "-cp", "pkg/exe.jar", "MyMainClass")
         .inOrder();
   }
 
@@ -193,7 +193,7 @@ public class SpawnActionTest extends BuildViewTestCase {
     // The action reports all arguments, including those inside the param file
     assertThat(action.getArguments())
         .containsExactly(
-            "/bin/java", "-Xverify:none", "-jvmarg", "-cp", "pkg/exe.jar", "MyMainClass", "-X")
+            "/bin/java", "-jvmarg", "-cp", "pkg/exe.jar", "MyMainClass", "-X")
         .inOrder();
 
     Spawn spawn =
@@ -204,7 +204,6 @@ public class SpawnActionTest extends BuildViewTestCase {
     assertThat(spawn.getArguments())
         .containsExactly(
             "/bin/java",
-            "-Xverify:none",
             "-jvmarg",
             "-cp",
             "pkg/exe.jar",
@@ -240,7 +239,6 @@ public class SpawnActionTest extends BuildViewTestCase {
     assertThat(action.getArguments())
         .containsExactly(
             "/bin/java",
-            "-Xverify:none",
             "-jvmarg",
             "-cp",
             "pkg/exe.jar",
